# tze-hud

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  rust-toolchain.toml
app/tze_hud_app/: Cargo.toml  build.rs  tze_hud.manifest  tze_hud.rc
app/tze_hud_app/config/: benchmark.toml  production.toml  windows-media-ingress.toml
app/tze_hud_app/src/: main.rs
app/tze_hud_app/tests/: benchmark_config_schema.rs  canonical_config_schema.rs  production_boot.rs
crates/tze_hud_a11y/: Cargo.toml
crates/tze_hud_a11y/src/: atspi.rs  lib.rs  noop.rs  nsaccessibility.rs  uia.rs
crates/tze_hud_compositor/: Cargo.toml
crates/tze_hud_compositor/benches/: markdown_cache.rs  overflow_truncate.rs  widget_rasterize.rs
crates/tze_hud_compositor/proptest-regressions/: overflow.txt
crates/tze_hud_compositor/src/: adapter.rs  fonts.rs  lib.rs  markdown.rs  overflow.rs  pipeline.rs  renderer.rs  surface.rs  text.rs  vertical_flow.rs  video_surface.rs  widget.rs
crates/tze_hud_compositor/tests/: alert_banner_rendering.rs  ambient_background_rendering.rs  gauge_binding_rendering.rs  gpu_canary.rs  notification_rendering.rs  rounded_rect_rendering.rs  subtitle_rendering.rs  widget_rasterize_budget.rs
crates/tze_hud_config/: Cargo.toml
crates/tze_hud_config/src/: agents.rs  capability.rs  component_profiles.rs  component_types.rs  lib.rs  loader.rs  media_ingress.rs  policy_builder.rs  portal_tokens.rs  privacy.rs  profile.rs  raw.rs  readability.rs  reload.rs  resolver.rs  runtime_widget_assets.rs  schema.rs  tests.rs  tokens.rs  widgets.rs  zones.rs
crates/tze_hud_input/: Cargo.toml
crates/tze_hud_input/src/: batching.rs  capture.rs  coalescing.rs  command.rs  composer_draft.rs  dispatch.rs  drag.rs  envelope.rs  event_queue.rs  events.rs  focus.rs  focus_tree.rs  hit_test.rs  jump_to_latest.rs  keyboard.rs  lib.rs  local_feedback.rs  pointer.rs  portal_resize.rs  scene_local_patch.rs  scroll.rs  scroll_indicator.rs
crates/tze_hud_mcp/: Cargo.toml
crates/tze_hud_mcp/src/: error.rs  lib.rs  portal_op.rs  schema.rs  server.rs  tools.rs  types.rs
crates/tze_hud_mcp/tests/: publish_to_zone_status_bar.rs
crates/tze_hud_media_android/: Cargo.toml  build.rs
crates/tze_hud_media_android/src/: lib.rs
crates/tze_hud_media_apple/: Cargo.toml  build.rs
crates/tze_hud_media_apple/src/: error.rs  format.rs  frame.rs  lib.rs  session.rs
crates/tze_hud_policy/: Cargo.toml
crates/tze_hud_policy/src/: attention.rs  attention_budget.rs  content.rs  event.rs  frame.rs  interruption.rs  lib.rs  mutation.rs  override_queue.rs  privacy.rs  resource.rs  safety.rs  security.rs  stack.rs  telemetry.rs  tests.rs  types.rs
crates/tze_hud_projection/: Cargo.toml
crates/tze_hud_projection/src/: authority.rs  contract.rs  lib.rs  managed_session.rs  portal.rs  portal_cadence.rs  resident_grpc.rs
crates/tze_hud_projection/tests/: projection_authority_cli.rs
crates/tze_hud_protocol/: Cargo.toml  build.rs
crates/tze_hud_protocol/proto/: events.proto  events_legacy.proto  scene_service.proto  session.proto  types.proto
crates/tze_hud_protocol/src/: auth.rs  convert.rs  dedup.rs  lease.rs  lib.rs  mcp_bridge.rs  server.rs  session.rs  session_server.rs  subscriptions.rs  token.rs
crates/tze_hud_protocol/tests/: backpressure.rs  capability_gating.rs  capture_lifecycle_agent_dispatch.rs  clock_domain.rs  dashboard_tile_agent.rs  dashboard_tile_agent_callbacks.rs  focus_event_agent_dispatch.rs  fuzz_protocol_boundary.rs  heartbeat.rs  keyboard_event_agent_dispatch.rs  lease_governance.rs  media_signaling.rs  pointer_event_agent_dispatch.rs  resource_upload_integration.rs  roundtrip.rs  scroll_offset_agent_dispatch.rs  sequence_validation.rs  session_fsm.rs  subscriptions.rs  widget_asset_register_integration.rs  widget_publish_integration.rs
crates/tze_hud_resource/: Cargo.toml
crates/tze_hud_resource/src/: budget.rs  debug.rs  dedup.rs  font_bytes_store.rs  font_cache.rs  gc.rs  lib.rs  refcount.rs  resident_ledger.rs  runtime_widget_store.rs  sharing.rs  store.rs  types.rs  upload.rs  validation.rs
crates/tze_hud_runtime/: Cargo.toml
crates/tze_hud_runtime/src/: admission.rs  budget.rs  channels.rs  component_startup.rs  degradation.rs  diag.rs  element_store.rs  event_bus.rs  font_loader.rs  gpu_lock.rs  gst_decode_pipeline.rs  headless.rs  idle_efficiency.rs  lib.rs  mcp.rs  media_admission.rs  media_ingress.rs  mutation_budget_bridge.rs  pipeline.rs  portal_cadence.rs  portal_projection_driver.rs  portal_tokens.rs  reload_triggers.rs  resident_grpc_bridge.rs  runtime_context.rs  session.rs  subscriptions.rs  tab_switch_trigger.rs  test_support.rs  threads.rs  trace_capture.rs  widget_hover.rs  widget_runtime_registration.rs  widget_startup.rs  window.rs  windowed.rs
crates/tze_hud_runtime/tests/: idle_efficiency_counters.rs  media_ingress_proptest.proptest-regressions  media_ingress_proptest.rs  pixel_helpers.rs  pixel_readback.rs  present_ack.rs
crates/tze_hud_scene/: Cargo.toml
crates/tze_hud_scene/benches/: hit_test.rs  snapshot.rs
crates/tze_hud_scene/src/: calibration.rs  clock.rs  diff.rs  element_store.rs  graph.rs  invariants.rs  (+9 more)
crates/tze_hud_validation/: Cargo.toml
crates/tze_hud_widget/: Cargo.toml
examples/benchmark/: Cargo.toml  TOKEN_FOOTPRINT.md  token_footprint_flow.py
examples/dashboard_tile_agent/: Cargo.toml
examples/render_artifacts/: Cargo.toml
examples/vertical_slice/: Cargo.toml
examples/widget_publish_load_harness/: Cargo.toml
tests/integration/: Cargo.toml  dashboard_tile_creation.rs  dashboard_tile_input.rs  dashboard_tile_lifecycle.rs  disconnect_orphan.rs  drag_reposition.rs  movable_elements_e2e.rs  multi_agent.rs  presence_card_coexistence.rs  presence_card_tile.rs  soak.rs  subtitle_streaming.rs  text_stream_portal_adapter.rs  text_stream_portal_cadence.rs  text_stream_portal_coalescing.rs  text_stream_portal_composer.rs  text_stream_portal_governance.rs  text_stream_portal_markdown.rs  text_stream_portal_styling.rs  text_stream_portal_surface.rs  trace_regression.rs  v1_thesis.rs
(+1506 files in other folders)
