[workspace]
resolver = "2"
members = [
    "crates/tze_hud_scene",
    "crates/tze_hud_compositor",
    "crates/tze_hud_runtime",
    "crates/tze_hud_protocol",
    "crates/tze_hud_input",
    "crates/tze_hud_telemetry",
    "crates/tze_hud_mcp",
    "crates/tze_hud_a11y",
    "crates/tze_hud_policy",
    "crates/tze_hud_resource",
    "examples/vertical_slice",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
# Scene graph
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / networking
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# GPU / windowing
wgpu = "24"
winit = "0.30"

# Telemetry / timing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Misc
subtle = "2.5"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
blake3 = "1"
arc-swap = "1"

[profile.release]
lto = true
codegen-units = 1
