[workspace]
resolver = "2"
members = [
    "crates/tze_hud_scene",
    "crates/tze_hud_compositor",
    "crates/tze_hud_runtime",
    "crates/tze_hud_protocol",
    "crates/tze_hud_input",
    "crates/tze_hud_telemetry",
    "crates/tze_hud_mcp",
    "crates/tze_hud_a11y",
    "crates/tze_hud_policy",
    "crates/tze_hud_config",
    "crates/tze_hud_resource",
    "crates/tze_hud_validation",
    "crates/tze_hud_widget",
    "crates/tze_hud_projection",
    "crates/tze_hud_media_apple",
    "app/tze_hud_app",
    "examples/vertical_slice",
    "examples/dashboard_tile_agent",
    "examples/benchmark",
    "examples/widget_publish_load_harness",
    "examples/render_artifacts",
    "tests/integration",
    "crates/tze_hud_media_android",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
# MSRV constraint: glyphon 0.8.x pins us to wgpu 24.x and Rust 1.88.
# See [workspace.dependencies] note on glyphon for upgrade path.
rust-version = "1.88"

[workspace.dependencies]
# Scene graph
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / networking
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# GPU / windowing
# NOTE: glyphon version is pinned to 0.8.x to match wgpu 24.x and Rust 1.88.
# Upgrade path: glyphon 0.9+ requires wgpu 28+ which requires Rust 1.92+.
# When bumping rust-version in [workspace.package], ensure glyphon is upgraded in sync.
wgpu = "24"
winit = "0.30"
glyphon = "0.8"

# Telemetry / timing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Config
toml = "0.8"
schemars = { version = "0.8", features = ["derive"] }

# XML parsing (SVG validation for widget asset bundle system)
quick-xml = "0.37"

# SVG rendering for widget compositor pipeline.
# Keep raster-images disabled; enable text + system fonts so widget <text>
# bindings (e.g., status-indicator labels) actually render.
resvg = { version = "0.47", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
tiny-skia = "0.12"

# Misc
subtle = "2.5"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
blake3 = "1"
getrandom = "0.3"
arc-swap = "1"
# State machines (v2 media plane)
statig = "0.4"

# GStreamer bindings — declared here so crates can reference them via
# `{ workspace = true, optional = true }`.
# System packages required: libgstreamer1.0-dev + libgstreamer-plugins-base1.0-dev.
gstreamer = "0.23"
gstreamer-app = "0.23"

[profile.release]
lto = true
codegen-units = 1
