[package]
name = "tze_hud_app"
description = "Canonical tze_hud runtime application binary — production entrypoint for windowed display runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tze_hud"
path = "src/main.rs"

[dependencies]
tze_hud_runtime = { path = "../../crates/tze_hud_runtime" }
tze_hud_config = { path = "../../crates/tze_hud_config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene" }

# Windows: embed the application manifest (tze_hud.manifest) at build time.
# The manifest declares PerMonitorV2 DPI awareness, ensuring that winit's
# MonitorHandle::size() and window.inner_size() always return physical pixels
# regardless of launch context (interactive session or scheduled task).
# Only active on Windows; ignored on other platforms.
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"
