[package]
name = "tze_hud_app"
description = "Canonical tze_hud runtime application binary — production entrypoint for windowed display runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tze_hud"
path = "src/main.rs"

[dependencies]
tze_hud_runtime = { path = "../../crates/tze_hud_runtime", version = "0.1.0" }
tze_hud_config = { path = "../../crates/tze_hud_config", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tze_hud_scene = { path = "../../crates/tze_hud_scene", version = "0.1.0" }
toml = { workspace = true }

# Build scripts compile for the host even when Cargo targets Windows, so this
# dependency must be available during Linux-to-Windows cross-builds. build.rs
# invokes it only when CARGO_CFG_TARGET_OS is windows.
[build-dependencies]
embed-resource = "3"

[lints]
workspace = true
