[package]
name = "tze_hud_a11y"
description = "Accessibility bridge for tze_hud — AT-SPI2, UIA, NSAccessibility, and no-op stubs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene", version = "0.1.0" }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
