[package]
name = "tze_hud_compositor"
description = "wgpu compositor for tze_hud — renders scene graph to screen or offscreen"
version.workspace = true
edition.workspace = true

[features]
headless = []

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glyphon = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
