[package]
name = "tze_hud_compositor"
description = "wgpu compositor for tze_hud — renders scene graph to screen or offscreen"
version.workspace = true
edition.workspace = true

[features]
headless = []
# v2 media plane — video surface render path (E26, B11).
# Code landing waits until v1 tagged v1.0.0 per F27 (signoff-packet.md).
v2_preview = []

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glyphon = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
statig = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }
tze_hud_widget = { path = "../tze_hud_widget" }

[[bench]]
name = "widget_rasterize"
harness = false
