[package]
name = "tze_hud_compositor"
description = "wgpu compositor for tze_hud — renders scene graph to screen or offscreen"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Deliberate API-surface marker: callers use `features = ["headless"]` to signal
# that they need the headless (offscreen) code paths. No cfg(feature="headless")
# gates exist inside this crate — the compositor always compiles all paths — but
# the marker lets consumers and CI jobs opt-in by name rather than relying on
# implicit availability.
headless = []
# v2 media plane — video surface render path (E26, B11).
# Code landing waits until v1 tagged v1.0.0 per F27 (signoff-packet.md).
v2_preview = []

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene", version = "0.1.0" }
tze_hud_input = { path = "../tze_hud_input", version = "0.1.0" }
tze_hud_telemetry = { path = "../tze_hud_telemetry", version = "0.1.0" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
glyphon = { workspace = true }
unicode-segmentation = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
ab_glyph = { workspace = true }
statig = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tze_hud_widget = { path = "../tze_hud_widget", version = "0.1.0" }

[[bench]]
name = "widget_rasterize"
harness = false

[[bench]]
name = "overflow_truncate"
harness = false

[[bench]]
name = "markdown_cache"
harness = false

[lints]
workspace = true
