[package]
name = "tze_hud_input"
description = "Input pipeline and hit-region processing for tze_hud"
version.workspace = true
edition.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
