[package]
name = "tze_hud_input"
description = "Input pipeline and hit-region processing for tze_hud"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
