[package]
name = "tze_hud_mcp"
description = "MCP (Model Context Protocol) compatibility bridge for tze_hud — JSON-RPC tools for LLM interoperability"
version.workspace = true
edition.workspace = true
license.workspace = true
lints.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
quick-xml = { workspace = true }

[features]
# Enable the reference HTTP server (run_http). Requires tokio's full feature set.
# Note: tze_hud_runtime always enables this feature (`features = ["http"]`) so
# in practice it is unconditionally active whenever the runtime is linked.
http = []

[dev-dependencies]
tokio = { workspace = true }
