[package]
name = "tze_hud_mcp"
description = "MCP (Model Context Protocol) compatibility bridge for tze_hud — JSON-RPC tools for LLM interoperability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene", version = "0.1.0" }
# Provides the stable `ProjectionErrorCode` carried on PortalOp reply channels
# (and surfaced in MCP `error.data.error_code`). No dependency cycle: the
# projection crate does not depend on tze_hud_mcp.
tze_hud_projection = { path = "../tze_hud_projection", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
quick-xml = { workspace = true }

[features]
# Enable the reference HTTP server (run_http). Requires tokio's full feature set.
# Note: tze_hud_runtime always enables this feature (`features = ["http"]`) so
# in practice it is unconditionally active whenever the runtime is linked.
http = []

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
