[package]
name = "tze_hud_media_android"
description = "Android GStreamer media shim for tze_hud — phase 3 D19 Pixel target"
version.workspace = true
edition.workspace = true
# Android only; the crate is a no-op stub on non-Android hosts so that
# `cargo check --workspace` continues to pass on Linux.

[lib]
# cdylib for Android .so output; rlib keeps the crate usable from Rust.
crate-type = ["rlib", "cdylib"]

[dependencies]
