[package]
name = "tze_hud_media_apple"
description = "Safe VTDecompressionSession wrapper over objc2-video-toolbox for tze_hud iOS media decode"
version.workspace = true
edition.workspace = true
license.workspace = true
# This crate is compiled on all targets; platform-specific code is gated via
# `cfg(target_vendor = "apple")`. On Linux/Windows the crate compiles to an
# empty stub so the workspace remains buildable without an Apple SDK.

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Apple-platform VideoToolbox bindings.
# Only pulled in on apple targets; the workspace stays compilable on Linux.
[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-video-toolbox = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-foundation = "0.3"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
# No external build-time crates required — the build.rs shells out to
# the libvpx configure script and make, both standard on macOS/Xcode hosts.
