[package]
name = "tze_hud_projection"
description = "Provider-neutral cooperative HUD projection operation contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tze_hud_projection_authority"
path = "src/bin/projection_authority.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
