[package]
name = "tze_hud_projection"
description = "Provider-neutral cooperative HUD projection operation contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tze_hud_projection_authority"
path = "src/bin/projection_authority.rs"
required-features = ["resident-grpc"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }
tze_hud_config = { path = "../tze_hud_config", optional = true }
tze_hud_protocol = { path = "../tze_hud_protocol", optional = true }
uuid = { workspace = true, optional = true }

[features]
default = []
resident-grpc = ["dep:tze_hud_config", "dep:tze_hud_protocol", "dep:uuid"]

[dev-dependencies]
proptest = { workspace = true }
# Required for the hud-0528i follow-tail end-to-end tests that simulate the
# runtime calling InputProcessor::notify_tile_content_appended with geometry
# carried in CliPortalDrainRecord::append_geometry.
tze_hud_input = { path = "../tze_hud_input" }
tze_hud_scene = { path = "../tze_hud_scene" }
