[package]
name = "tze_hud_protocol"
description = "gRPC protocol layer for tze_hud agent communication"
version.workspace = true
edition.workspace = true

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_policy = { path = "../tze_hud_policy" }
tze_hud_widget = { path = "../tze_hud_widget" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
tze_hud_resource = { path = "../tze_hud_resource" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
blake3 = { workspace = true }
quick-xml = { workspace = true }
crc32c = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[build-dependencies]
tonic-build = "0.13"
