[package]
name = "tze_hud_protocol"
description = "gRPC protocol layer for tze_hud agent communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Enables constructors that are only safe in tests or local dev environments.
## Required by integration tests that build a HudSessionImpl directly from a
## SceneGraph without going through the production config path.
dev-mode = []

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene", version = "0.1.0" }
tze_hud_widget = { path = "../tze_hud_widget", version = "0.1.0" }
tze_hud_telemetry = { path = "../tze_hud_telemetry", version = "0.1.0" }
tze_hud_resource = { path = "../tze_hud_resource", version = "0.1.0" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
blake3 = { workspace = true }
quick-xml = { workspace = true }
crc32c = "0.6"
serde_json = { workspace = true }
# toml is used by the element-store persistence helper in session_server.
# Serialization for ElementStore data was moved out of tze_hud_scene (which is
# now I/O-free); the write path lives in tze_hud_runtime, but a lightweight
# serialize-and-write helper is duplicated here to avoid a circular dep
# (tze_hud_runtime already depends on tze_hud_protocol).
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
# `subtle` provides `ConstantTimeEq` for the constant-time PSK comparison in
# `auth.rs`. Dependency-policy justification (engineering-bar.md §6): `subtle`
# is the de-facto-standard constant-time-primitives crate (RustCrypto
# ecosystem), permissively licensed (BSD-3-Clause — cargo-deny clean), has a
# tiny `no_std` surface with no transitive deps, and is ALREADY a vetted
# workspace dependency used by `tze_hud_mcp` and `tze_hud_projection`. It
# replaces a hand-rolled xor-fold so we no longer maintain a security-relevant
# primitive ourselves.
subtle = { workspace = true }

[dev-dependencies]
# Self-dependency with dev-mode enabled so that integration tests under tests/
# can call HudSessionImpl::new without going through the production config path.
tze_hud_protocol = { path = ".", version = "0.1.0", features = ["dev-mode"] }
proptest = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = "0.13"

[lints]
workspace = true
