[package]
name = "tze_hud_runtime"
description = "Runtime kernel for tze_hud — frame pipeline, admission, budgets"
version.workspace = true
edition.workspace = true

[features]
headless = ["tze_hud_compositor/headless"]
## Enable dev-mode: allows `HeadlessConfig { config_toml: None }` to start with
## unrestricted capability grants. MUST NOT be enabled in production builds.
## Safe to enable in tests (which also compile under `cfg(test)`) and examples.
dev-mode = []

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_compositor = { path = "../tze_hud_compositor" }
tze_hud_protocol = { path = "../tze_hud_protocol" }
tze_hud_input = { path = "../tze_hud_input" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
tze_hud_config = { path = "../tze_hud_config" }
tze_hud_widget = { path = "../tze_hud_widget" }
tze_hud_mcp = { path = "../tze_hud_mcp", features = ["http"] }
tze_hud_resource = { path = "../tze_hud_resource" }
tokio = { workspace = true }
tonic = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading"] }

[dev-dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_compositor = { path = "../tze_hud_compositor" }
tokio = { workspace = true }
blake3 = { workspace = true }

[[test]]
name = "pixel_readback"
path = "tests/pixel_readback.rs"
# dev-mode required because pixel_helpers.rs uses config_toml: None.
# Integration tests are separate binaries; cfg(test) is set in them but NOT
# in the library they link, so the dev-mode feature must be explicit here.
required-features = ["headless", "dev-mode"]
