[package]
name = "tze_hud_runtime"
description = "Runtime kernel for tze_hud — frame pipeline, admission, budgets"
version.workspace = true
edition.workspace = true

[features]
headless = ["tze_hud_compositor/headless"]
## Enable dev-mode: allows `HeadlessConfig { config_toml: None }` to start with
## unrestricted capability grants. MUST NOT be enabled in production builds.
## Safe to enable in tests (which also compile under `cfg(test)`) and examples.
dev-mode = []
## Enable the GStreamer appsink-backed MediaDecodePipeline.
## Requires system packages: libgstreamer1.0-dev + libgstreamer-plugins-base1.0-dev.
## Without this feature the `gst_decode_pipeline` module is absent and
## `cargo check --workspace` succeeds on hosts without GStreamer headers.
gstreamer = [
    "dep:gstreamer",
    "dep:gstreamer-app",
    "tze_hud_compositor/v2_preview",
]
## Enable the bounded v2 media-surface hooks without requiring GStreamer.
## Used by synthetic/headless validation lanes where frames are generated in-process.
v2_preview = ["tze_hud_compositor/v2_preview"]

[dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_compositor = { path = "../tze_hud_compositor" }
tze_hud_protocol = { path = "../tze_hud_protocol" }
tze_hud_input = { path = "../tze_hud_input" }
tze_hud_telemetry = { path = "../tze_hud_telemetry" }
tze_hud_config = { path = "../tze_hud_config" }
tze_hud_widget = { path = "../tze_hud_widget" }
tze_hud_mcp = { path = "../tze_hud_mcp", features = ["http"] }
tze_hud_resource = { path = "../tze_hud_resource" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
statig = { workspace = true }

# GStreamer — optional; activated by the `gstreamer` feature flag.
# Cargo 1.74+ supports `{ workspace = true, optional = true }` so we use the
# workspace declaration instead of re-specifying the version here.
gstreamer = { workspace = true, optional = true }
gstreamer-app = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Time", "Win32_System_SystemInformation", "Win32_System_DataExchange", "Win32_System_Memory"] }

[dev-dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_compositor = { path = "../tze_hud_compositor" }
tokio = { workspace = true }
blake3 = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "pixel_readback"
path = "tests/pixel_readback.rs"
# dev-mode required because pixel_helpers.rs uses config_toml: None.
# Integration tests are separate binaries; cfg(test) is set in them but NOT
# in the library they link, so the dev-mode feature must be explicit here.
required-features = ["headless", "dev-mode"]
