[package]
name = "tze_hud_scene"
description = "Pure scene graph data model for tze_hud — no GPU dependency"
version.workspace = true
edition.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[[bench]]
name = "hit_test"
harness = false

[[bench]]
name = "snapshot"
harness = false
