[package]
name = "tze_hud_validation"
description = "Layer 2 SSIM visual regression and Layer 4 developer visibility artifacts for tze_hud"
version.workspace = true
edition.workspace = true

[[test]]
name = "layer2_headless"
path = "tests/layer2_headless.rs"
required-features = ["headless"]

[[test]]
name = "layer4"
path = "tests/layer4.rs"

[features]
# Enables Layer 2 SSIM tests that require headless GPU rendering.
headless = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = { workspace = true }

[dev-dependencies]
tze_hud_scene = { path = "../tze_hud_scene" }
tze_hud_compositor = { path = "../tze_hud_compositor", features = ["headless"] }
tokio = { workspace = true }
